# portfolio-render

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  fly.toml  railway.json  render.yaml
.claude/commands/: deploy-all.md  deploy-backend.md  deploy-frontend.md
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.prod  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/dependencies/: auth.py
backend/app/models/: models.py
backend/app/routers/: auth.py  contact.py  dashboard.py  health.py  profile.py  projects.py  skills.py  upload.py
backend/app/schemas/: auth.py  contact.py  profile.py  projects.py  skills.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_projects.py  test_skills.py  test_upload_validation.py
backend/tests/integration/: conftest.py  test_email.py
docs/: DEPLOY.md  PLAN.md  TASK.md
frontend/: Dockerfile  Dockerfile.prod  next.config.ts  package.json
frontend/src/__tests__/hooks/: useContactMessages.test.ts  useProfile.test.ts  useProjects.test.ts  useSkills.test.ts
frontend/src/__tests__/lib/: api.test.ts  auth.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/hooks/: useContactMessages.ts  useDashboardStats.ts  useProfile.ts  useProjects.ts  useSkills.ts
frontend/src/lib/: api.ts  auth.ts  queryKeys.ts
frontend/src/test/: fixtures.ts  setup.ts  utils.tsx
frontend/src/types/: index.ts
scripts/: e2e-test.sh
(+39 files in other folders)
